--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
 						</div>
 						<div class="price-box">
 							<p class="price-before text-size--13 tablet-hidden text-regular">Only</p>
-							<p class="text-size--44 trailer--xxlarge tabletl-text-size--19 text-light tabletl-text-regular color-blue">XXX<span class="text-size--19 tabletl-text-size--11 color-gray text-regular toleft--xsmall">KR./MD.</span></p>
+							<p class="text-size--44 trailer--large tabletl-trailer--xlarge tabletl-text-size--19 text-light tabletl-text-regular color-blue">XXX<span class="text-size--19 tabletl-text-size--11 color-gray text-regular toleft--xsmall">KR./MD.</span></p>
 							<p class="text-size--11 text-legal">Legal text ex. w. FRI+ XX GB: X.XXX kr.</p>
 						</div>
 					</div>
@@ -330,7 +330,7 @@
 						</div>
 						<div class="price-box">
 							<p class="price-before text-size--13 tablet-hidden text-regular">Only</p>
-							<p class="text-size--44 trailer--xxlarge tabletl-text-size--19 text-light tabletl-text-regular color-blue">XXX<span class="text-size--19 tabletl-text-size--11 color-gray text-regular toleft--xsmall">KR./MD.</span></p>
+							<p class="text-size--44 trailer--large tabletl-trailer--xlarge tabletl-text-size--19 text-light tabletl-text-regular color-blue">XXX<span class="text-size--19 tabletl-text-size--11 color-gray text-regular toleft--xsmall">KR./MD.</span></p>
 							<p class="text-size--11 text-legal">Legal text ex. w. FRI+ XX GB: X.XXX kr.</p>
 						</div>
 					</div>
@@ -366,7 +366,7 @@
 						</div>
 						<div class="price-box">
 							<p class="price-before text-size--13 tablet-hidden text-regular">Only</p>
-							<p class="text-size--44 trailer--xxlarge tabletl-text-size--19 text-light tabletl-text-regular color-blue">XXX<span class="text-size--19 tabletl-text-size--11 color-gray text-regular toleft--xsmall">KR./MD.</span></p>
+							<p class="text-size--44 trailer--large tabletl-trailer--xlarge tabletl-text-size--19 text-light tabletl-text-regular color-blue">XXX<span class="text-size--19 tabletl-text-size--11 color-gray text-regular toleft--xsmall">KR./MD.</span></p>
 							<p class="text-size--11 text-legal">Legal text ex. w. FRI+ XX GB: X.XXX kr.</p>
 						</div>
 					</div>
@@ -395,7 +395,7 @@
 						</div>
 						<div class="price-box">
 							<p class="price-before text-size--13 tablet-hidden text-regular">Only</p>
-							<p class="text-size--44 trailer--xxlarge tabletl-text-size--19 text-light tabletl-text-regular color-blue">XXX<span class="text-size--19 tabletl-text-size--11 color-gray text-regular toleft--xsmall">KR./MD.</span></p>
+							<p class="text-size--44 trailer--large tabletl-trailer--xlarge tabletl-text-size--19 text-light tabletl-text-regular color-blue">XXX<span class="text-size--19 tabletl-text-size--11 color-gray text-regular toleft--xsmall">KR./MD.</span></p>
 							<p class="text-size--11 text-legal">Legal text ex. w. FRI+ XX GB: X.XXX kr.</p>
 						</div>
 					</div>
@@ -439,7 +439,7 @@
 						</div>
 						<div class="price-box">
 							<p class="price-before text-size--13 tablet-hidden text-regular">Only</p>
-							<p class="text-size--44 trailer--xxlarge tabletl-text-size--19 text-light tabletl-text-regular color-blue">XXX<span class="text-size--19 tabletl-text-size--11 color-gray text-regular toleft--xsmall">KR./MD.</span></p>
+							<p class="text-size--44 trailer--large tabletl-trailer--xlarge tabletl-text-size--19 text-light tabletl-text-regular color-blue">XXX<span class="text-size--19 tabletl-text-size--11 color-gray text-regular toleft--xsmall">KR./MD.</span></p>
 							<p class="text-size--11 text-legal">Legal text ex. w. FRI+ XX GB: X.XXX kr.</p>
 						</div>
 					</div>
@@ -475,7 +475,7 @@
 						</div>
 						<div class="price-box">
 							<p class="price-before text-size--13 tablet-hidden text-regular">Only</p>
-							<p class="text-size--44 trailer--xxlarge tabletl-text-size--19 text-light tabletl-text-regular color-blue">XXX<span class="text-size--19 tabletl-text-size--11 color-gray text-regular toleft--xsmall">KR./MD.</span></p>
+							<p class="text-size--44 trailer--large tabletl-trailer--xlarge tabletl-text-size--19 text-light tabletl-text-regular color-blue">XXX<span class="text-size--19 tabletl-text-size--11 color-gray text-regular toleft--xsmall">KR./MD.</span></p>
 							<p class="text-size--11 text-legal">Legal text ex. w. FRI+ XX GB: X.XXX kr.</p>
 						</div>
 					</div>
