--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 	
 	<div class="container padding-leader">
 		<h2 class="text-size--34 trailer">New Blocks</h2>
-		<h3>9-col Accessories Block</h3>
+		<h3>9-col accessories product block</h3>
 		<div class="grid-row--gutter-small">
 			<div class="col-hg-9 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
 				<a href="#" class="terminal-block terminal-block--accessories grid-row--gutter-none">
@@ -345,7 +345,7 @@
 				</a>
 			</div>
 		</div>
-		<h3 class="leader trailer">9-col Accessories Tablet/Mobile Block</h3>
+		<h3 class="leader trailer">9-col mobile/tablet product block</h3>
 		<div class="grid-row--gutter-small">
 			<div class="col-hg-9 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
 				<a href="#" class="terminal-block terminal-block--accessories terminal-block--accessories-tablet-large grid-row--gutter-none">
@@ -410,7 +410,7 @@
 				</a>
 			</div>
 		</div>
-		<h3 class="leader trailer">6-col Accessories Tablet Block</h3>
+		<h3 class="leader trailer">6-col Tablet product block</h3>
 		<div class="grid-row--gutter-small">
 			<div class="col-hg-6 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
 				<a href="#" class="terminal-block terminal-block--accessories terminal-block--accessories-tablet-small grid-row--gutter-none">
@@ -446,7 +446,7 @@
 				</a>
 			</div>
 		</div>
-		<h3 class="leader trailer">6-col Accessories Mobile Block</h3>
+		<h3 class="leader trailer">6-col Mobile product block</h3>
 		<div class="grid-row--gutter-small">
 			<div class="col-hg-6 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
 				<a href="#" class="terminal-block terminal-block--accessories terminal-block--accessories-mobile-small grid-row--gutter-none">
