--- a/index.html
+++ b/index.html
@@ -24,50 +24,9 @@
 		.border-width-2:after {
 			border-width: 2px;
 		}
-		/*.button--action {
-			background: -moz-linear-gradient(top,  #029df0 0%, #038cd6 100%); 
-			background: -webkit-linear-gradient(top,  #029df0 0%,#038cd6 100%);
-			background: linear-gradient(to bottom,  #029df0 0%,#038cd6 100%); 
-		}
-		.button--action:hover {
-			background: -moz-linear-gradient(top,  #028cd6 0%, #027bbd 100%); 
-			background: -webkit-linear-gradient(top,  #028cd6 0%,#027bbd 100%);
-			background: linear-gradient(to bottom,  #028cd6 0%,#027bbd 100%);
-		}*/
 	</style>
 </head>
 <body>
-
-<style>
-	
-	.carousel--loop .carousel__holder {
-		height: 402px;
-	}
-
-	.carousel__prev, .carousel__next {
-		outline: none;
-		border:none;
-	}
-
-	.carousel--loop .carousel__item {
-		float: none;
-		width: 100%;
-		visibility: hidden;
-	}
-
-	.carousel--loop .carousel__item:first-child {
-		visibility: visible;
-	}
-	
-	.carousel--loop .carousel__item:nth-child(even) img {
-		transform: rotate(180deg);
-	}
-
-	.carousel--init .carousel__item {
-		visibility: visible;
-	}
-
-</style>
 
 <div id="main" class="container--main">
 	<div class="hero-banner container--wide trailer--large">
@@ -180,11 +139,13 @@
 					</div>
 					<div class="col-hg-6 tabletl-text--center padding-trailer--large tabletl-padding-trailer--none">
 						<div class="description">
-							<ul class="colors-list desktoplg-hidden">
-								<li class="gray"></li>
-								<li class="red"></li>
-								<li class="green"></li>
-							</ul>
+							<div class="colors-holder desktoplg-hidden">
+								<ul class="colors-list">
+									<li class="gray"></li>
+									<li class="red"></li>
+									<li class="green"></li>
+								</ul>
+							</div>	
 							<h2 class="text-size--38 tabletl-text-size--16 trailer--small tabletl-trailer--none text-light tabletl-text-regular">Sony Xperia XZ Compact <span class="tablet-hidden">Third line</span></h2>
 							<ul class="list list--check tablet-hidden text-size--16">
 								<li>Fri tale og sms</li>
@@ -210,11 +171,13 @@
 							<img src="splash.png" alt="splash">
 						</div>
 					</div>
-					<ul class="colors-list">
-						<li class="gray"></li>
-						<li class="red"></li>
-						<li class="green"></li>
-					</ul>
+					<div class="colors-holder">
+						<ul class="colors-list">
+							<li class="gray"></li>
+							<li class="red"></li>
+							<li class="green"></li>
+						</ul>
+					</div>	
 					<h3 class="text-size--16">Sony Xperia XZ Compact</h3>
 					<div class="price-box trailer">
 						<p class="text-size--19 color-blue">XXX<span class="text-size--11 color-gray toleft--xsmall">KR./MD.</span></p>
@@ -232,11 +195,13 @@
 							<img src="splash.png" alt="splash">
 						</div>
 					</div>
-					<ul class="colors-list">
-						<li class="gray"></li>
-						<li class="red"></li>
-						<li class="green"></li>
-					</ul>
+					<div class="colors-holder">
+						<ul class="colors-list">
+							<li class="gray"></li>
+							<li class="red"></li>
+							<li class="green"></li>
+						</ul>
+					</div>	
 					<h3 class="text-size--16">Sony Xperia XZ Compact</h3>
 					<div class="price-box">
 						<p class="text-size--19 color-blue">XXX<span class="text-size--11 color-gray toleft--xsmall">KR./MD.</span></p>
@@ -254,11 +219,13 @@
 							<img src="splash.png" alt="splash">
 						</div>
 					</div>
-					<ul class="colors-list">
-						<li class="gray"></li>
-						<li class="red"></li>
-						<li class="green"></li>
-					</ul>
+					<div class="colors-holder">
+						<ul class="colors-list">
+							<li class="gray"></li>
+							<li class="red"></li>
+							<li class="green"></li>
+						</ul>
+					</div>	
 					<h3 class="text-size--16">Sony Xperia XZ Compact</h3>
 					<div class="price-box trailer">
 						<p class="text-size--19 color-blue">XXX<span class="text-size--11 color-gray toleft--xsmall">KR./MD.</span></p>
@@ -276,11 +243,13 @@
 							<img src="splash.png" alt="splash">
 						</div>
 					</div>
-					<ul class="colors-list">
-						<li class="gray"></li>
-						<li class="red"></li>
-						<li class="green"></li>
-					</ul>
+					<div class="colors-holder">
+						<ul class="colors-list">
+							<li class="gray"></li>
+							<li class="red"></li>
+							<li class="green"></li>
+						</ul>
+					</div>	
 					<h3 class="text-size--16">Sony Xperia XZ Compact</h3>
 					<div class="price-box trailer">
 						<p class="text-size--19 color-blue">XXX<span class="text-size--11 color-gray toleft--xsmall">KR./MD.</span></p>
@@ -345,11 +314,13 @@
 							<img src="splash.png" alt="splash">
 						</div>
 					</div>
-					<ul class="colors-list">
-						<li class="gray"></li>
-						<li class="red"></li>
-						<li class="green"></li>
-					</ul>
+					<div class="colors-holder">
+						<ul class="colors-list">
+							<li class="gray"></li>
+							<li class="red"></li>
+							<li class="green"></li>
+						</ul>
+					</div>	
 					<h3 class="text-size--16">Sony Xperia XZ Compact</h3>
 					<div class="price-box trailer">
 						<p class="text-size--19 color-blue">XXX<span class="text-size--11 color-gray toleft--xsmall">KR./MD.</span></p>
@@ -392,11 +363,13 @@
 				<a href="#" class="terminal-block terminal-block--accessories grid-row--gutter-none">
 					<div class="col-hg-5 bundle-content tabletl-text--center">
 						<div class="description">
-							<ul class="colors-list desktoplg-hidden">
-								<li class="gray"></li>
-								<li class="red"></li>
-								<li class="green"></li>
-							</ul>
+							<div class="colors-holder desktoplg-hidden">
+								<ul class="colors-list">
+									<li class="gray"></li>
+									<li class="red"></li>
+									<li class="green"></li>
+								</ul>
+							</div>	
 							<span class="text-size--13 text-bold font-roboto tablet-hidden">TEASER HEADER</span>
 							<h2 class="text-size--38 tabletl-text-size--16 trailer--small tabletl-trailer--none text-light tabletl-text-regular">Product title</h2>
 							<ul class="list list--check tablet-hidden text-size--16">
@@ -413,9 +386,9 @@
 					</div>
 					<div class="col-hg-7 image-area mobile-order--first">
 						<div class="image-holder">
-							<img src="image-accessories.png" alt="">
+							<img src="accessories-test-img-1.png" alt="">
 							<div class="splash splash--image">
-								<img src="splash-img.png" alt="splash" width="100" height="100">
+								<img src="splash.png" alt="splash" width="100" height="100">
 							</div>
 						</div>
 					</div>
@@ -425,11 +398,13 @@
 				<a href="#" class="terminal-block terminal-block--accessories grid-row--gutter-none">
 					<div class="col-hg-5 bundle-content tabletl-text--center">
 						<div class="description">
-							<ul class="colors-list desktoplg-hidden">
-								<li class="gray"></li>
-								<li class="red"></li>
-								<li class="green"></li>
-							</ul>
+							<div class="colors-holder desktoplg-hidden">
+								<ul class="colors-list">
+									<li class="gray"></li>
+									<li class="red"></li>
+									<li class="green"></li>
+								</ul>
+							</div>	
 							<span class="text-size--13 text-bold font-roboto tablet-hidden">TEASER HEADER</span>
 							<h2 class="text-size--38 tabletl-text-size--16 trailer--small tabletl-trailer--none text-light tabletl-text-regular">Product title</h2>
 							<p class="tablet-hidden">Free Episerver text description. Here you can write whatever you want to, it could be something about the terminal. Be creative :-)</p>
@@ -442,9 +417,9 @@
 					</div>
 					<div class="col-hg-7 image-area mobile-order--first">
 						<div class="image-holder">
-							<img src="image-accessories.png" alt="">
+							<img src="accessories-test-img-2.png" alt="">
 							<div class="splash splash--image">
-								<img src="splash-img.png" alt="splash" width="100" height="100">
+								<img src="splash.png" alt="splash" width="100" height="100">
 							</div>
 						</div>
 					</div>
@@ -457,11 +432,13 @@
 				<a href="#" class="terminal-block terminal-block--accessories terminal-block--accessories-tablet-large grid-row--gutter-none">
 					<div class="col-hg-5 bundle-content tabletl-text--center">
 						<div class="description">
-							<ul class="colors-list desktoplg-hidden">
-								<li class="gray"></li>
-								<li class="red"></li>
-								<li class="green"></li>
-							</ul>
+							<div class="colors-holder desktoplg-hidden">
+								<ul class="colors-list">
+									<li class="gray"></li>
+									<li class="red"></li>
+									<li class="green"></li>
+								</ul>
+							</div>	
 							<span class="text-size--13 text-bold font-roboto tablet-hidden">TEASER HEADER</span>
 							<h2 class="text-size--38 tabletl-text-size--16 trailer--small tabletl-trailer--none text-light tabletl-text-regular">Product title</h2>
 							<ul class="list list--check tablet-hidden text-size--16">
@@ -478,9 +455,9 @@
 					</div>
 					<div class="col-hg-7 image-area mobile-order--first">
 						<div class="image-holder">
-							<img src="image-accessories-tablet.png" alt="">
+							<img src="tablet-test-img.png" alt="">
 							<div class="splash splash--image">
-								<img src="splash-img.png" alt="splash" width="100" height="100">
+								<img src="splash.png" alt="splash" width="100" height="100">
 							</div>
 						</div>
 					</div>
@@ -490,11 +467,13 @@
 				<a href="#" class="terminal-block terminal-block--accessories terminal-block--accessories-tablet-large grid-row--gutter-none">
 					<div class="col-hg-5 bundle-content tabletl-text--center">
 						<div class="description">
-							<ul class="colors-list desktoplg-hidden">
-								<li class="gray"></li>
-								<li class="red"></li>
-								<li class="green"></li>
-							</ul>
+							<div class="colors-holder desktoplg-hidden">
+								<ul class="colors-list">
+									<li class="gray"></li>
+									<li class="red"></li>
+									<li class="green"></li>
+								</ul>
+							</div>	
 							<span class="text-size--13 text-bold font-roboto tablet-hidden">TEASER HEADER</span>
 							<h2 class="text-size--38 tabletl-text-size--16 trailer--small tabletl-trailer--none text-light tabletl-text-regular">Product title</h2>
 							<p class="tablet-hidden">Free Episerver text description. Here you can write whatever you want to, it could be something about the terminal. Be creative :-)</p>
@@ -507,9 +486,9 @@
 					</div>
 					<div class="col-hg-7 image-area mobile-order--first">
 						<div class="image-holder">
-							<img src="image-accessories-tablet.png" alt="">
+							<img src="mobile-test-img-1.png" alt="">
 							<div class="splash splash--image">
-								<img src="splash-img.png" alt="splash" width="100" height="100">
+								<img src="splash.png" alt="splash" width="100" height="100">
 							</div>
 						</div>
 					</div>
@@ -522,19 +501,21 @@
 				<a href="#" class="terminal-block terminal-block--accessories terminal-block--accessories-tablet-small grid-row--gutter-none">
 					<div class="col-hg-5 image-area mobile-order--first">
 						<div class="image-holder">
-							<img src="img-tablet-small.png" alt="">
+							<img src="tablet-test-img.png" alt="">
 							<div class="splash splash--image">
-								<img src="splash-img.png" alt="splash" width="100" height="100">
+								<img src="splash.png" alt="splash" width="100" height="100">
 							</div>
 						</div>
 					</div>
 					<div class="col-hg-7 bundle-content tabletl-text--center">
 						<div class="description">
-							<ul class="colors-list desktoplg-hidden">
-								<li class="gray"></li>
-								<li class="red"></li>
-								<li class="green"></li>
-							</ul>
+							<div class="colors-holder desktoplg-hidden">
+								<ul class="colors-list">
+									<li class="gray"></li>
+									<li class="red"></li>
+									<li class="green"></li>
+								</ul>
+							</div>	
 							<span class="text-size--13 text-bold font-roboto tablet-hidden">TEASER HEADER</span>
 							<h2 class="text-size--38 tabletl-text-size--16 trailer--small tabletl-trailer--none text-light tabletl-text-regular">Product title</h2>
 							<ul class="list list--check tablet-hidden text-size--16">
@@ -558,19 +539,21 @@
 				<a href="#" class="terminal-block terminal-block--accessories terminal-block--accessories-mobile-small grid-row--gutter-none">
 					<div class="col-hg-5 image-area mobile-order--first">
 						<div class="image-holder">
-							<img src="img-mobile.png" alt="">
+							<img src="mobile-test-img-2.png" alt="">
 							<div class="splash splash--image">
-								<img src="splash-img.png" alt="splash" width="100" height="100">
+								<img src="splash.png" alt="splash" width="100" height="100">
 							</div>
 						</div>
 					</div>
 					<div class="col-hg-7 bundle-content tabletl-text--center">
 						<div class="description">
-							<ul class="colors-list desktoplg-hidden">
-								<li class="gray"></li>
-								<li class="red"></li>
-								<li class="green"></li>
-							</ul>
+							<div class="colors-holder desktoplg-hidden">
+								<ul class="colors-list">
+									<li class="gray"></li>
+									<li class="red"></li>
+									<li class="green"></li>
+								</ul>
+							</div>	
 							<span class="text-size--13 text-bold font-roboto tablet-hidden">TEASER HEADER</span>
 							<h2 class="text-size--38 tabletl-text-size--16 trailer--small tabletl-trailer--none text-light tabletl-text-regular">Product title</h2>
 							<ul class="list list--check tablet-hidden text-size--16">
