add resize events for the gallery

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <div id="main" class="container--main">
 	<div class="hero-banner container--wide trailer--large">
 		
-		<div class="container carousel carousel--loop" data-component="carousel" data-loop="true" data-auto-play="5000" data-duration="5000">
+		<div class="container carousel carousel--loop" data-component="carousel" data-loop="true" data-auto-play="5000" data-duration="1000" data-visible-slides="1">
 			<button class="carousel__prev" href="#" data-alias="btnPrev" data-component="button"><i class="icon-arrow-prev"></i></button>
 			
 			<div class="carousel__holder" data-element="carouselHolder">
@@ -159,6 +159,7 @@
 		</div>
 
 	</div>
+
 	<div class="container padding-leader padding-trailer">
 		<h1 class="text-size--38 tabletl-text-size--34 text-light">Our own favorits</h1>
 	</div>
