revert visibility: visible

--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@
 </head>
 <body>
 
+<style>
+	
+	.carousel--init .carousel--item {
+		visibility: visible;
+	}
+</style>
+
 <div id="main" class="container--main">
 	<div class="hero-banner container--wide trailer--large">
 		
