fix bugs. Added 3-col blocks

--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
 		<h3 class="leader trailer">6-col Tablet product block</h3>
 		<div class="grid-row--gutter-small">
 			<div class="col-hg-6 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
-				<a href="#" class="terminal-block terminal-block--accessories terminal-block--accessories-tablet-small grid-row--gutter-none">
+				<a href="#" class="terminal-block terminal-block--accessories terminal-block--accessories-tablet-medium grid-row--gutter-none">
 					<div class="col-hg-5 image-area mobile-order--first">
 						<div class="image-holder">
 							<img src="tablet-test-img.png" alt="">
@@ -537,7 +537,7 @@
 		<h3 class="leader trailer">6-col Mobile product block</h3>
 		<div class="grid-row--gutter-small">
 			<div class="col-hg-6 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
-				<a href="#" class="terminal-block terminal-block--accessories terminal-block--accessories-mobile-small grid-row--gutter-none">
+				<a href="#" class="terminal-block terminal-block--accessories terminal-block--accessories-mobile-medium grid-row--gutter-none">
 					<div class="col-hg-5 image-area mobile-order--first">
 						<div class="image-holder">
 							<img src="mobile-test-img-2.png" alt="">
@@ -572,6 +572,69 @@
 				</a>
 			</div>
 		</div>
+		<h3 class="leader trailer">3-col accessories block</h3>
+		<div class="grid-row--gutter-small">
+			<div class="col-hg-3 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
+				<a href="#" class="terminal-block terminal-block--accessories terminal-block--accessories-small grid-row--gutter-none">
+					<div class="col-hg-12 image-area mobile-order--first">
+						<div class="image-holder">
+							<img src="img-accessories-small.png" alt="">
+							<div class="splash splash--image">
+								<img src="splash.png" alt="splash" width="100" height="100">
+							</div>
+						</div>
+					</div>
+					<div class="col-hg-12 bundle-content text--center">
+						<div class="description">
+							<div class="colors-holder">
+								<ul class="colors-list">
+									<li class="gray"></li>
+									<li class="red"></li>
+									<li class="green"></li>
+								</ul>
+							</div>	
+							<h2 class="text-size--16 text-regular">Product title</h2>
+						</div>
+						<div class="price-box">
+							<p class="text-size--19 trailer--xlarge text-regular color-blue">XXX<span class="text-size--11 color-gray text-regular toleft--xsmall">KR./MD.</span></p>
+							<p class="text-size--11 text-legal">Legal text ex. w. FRI+ XX GB: X.XXX kr.</p>
+						</div>
+					</div>
+				</a>
+			</div>
+		</div>
+		<h3 class="leader trailer">3-col mobile/tablet product block</h3>
+		<div class="grid-row--gutter-small">
+			<div class="col-hg-3 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
+				<a href="#" class="terminal-block terminal-block--accessories terminal-block--accessories-product-small grid-row--gutter-none">
+					<div class="col-hg-12 image-area mobile-order--first">
+						<div class="image-holder">
+							<img src="img-mobile-small.png" alt="">
+							<div class="splash splash--image">
+								<img src="splash.png" alt="splash" width="100" height="100">
+							</div>
+						</div>
+					</div>
+					<div class="col-hg-12 bundle-content text--center">
+						<div class="description">
+							<div class="colors-holder">
+								<ul class="colors-list">
+									<li class="gray"></li>
+									<li class="red"></li>
+									<li class="green"></li>
+								</ul>
+							</div>	
+							<h2 class="text-size--16 text-regular">Product title</h2>
+						</div>
+						<div class="price-box">
+							<p class="text-size--19 trailer--xlarge text-regular color-blue">XXX<span class="text-size--11 color-gray text-regular toleft--xsmall">KR./MD.</span></p>
+							<p class="text-size--11 text-legal">Legal text ex. w. FRI+ XX GB: X.XXX kr.</p>
+						</div>
+					</div>
+				</a>
+			</div>
+		</div>
+		<h3 class="leader trailer">&nbsp;</h3>
 	</div>
 </div>
 
