--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<title>Document</title>
-	<!-- <link rel="stylesheet" type="text/css" href="../../onescreen/OneScreen/Client/S/app/css/main.css"> -->
-	<link rel="stylesheet" type="text/css" href="main.css">
+	<link rel="stylesheet" type="text/css" href="../../onescreen/OneScreen/Client/S/app/css/main.css">
+	<!-- <link rel="stylesheet" type="text/css" href="main.css"> -->
 		 
 	<style type="text/css">
 		body {
