--- a/index.html
+++ b/index.html
@@ -633,6 +633,207 @@
 					</div>
 				</a>
 			</div>
+			<div class="col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
+				<div class="content-block content-block--medium grid-row--gutter-none">
+					<div class="col-hg-6 padding-toright tabletl-padding-toright--none image-area">
+						<div class="image-holder">
+							<img src="phone-01.jpg" alt="">
+						</div>
+						<img class="sticker" src="splash.png" alt="sticker">
+					</div>
+					<div class="col-hg-6 tabletl-text--center padding-trailer--large tabletl-padding-trailer--none">
+						<div class="description">
+							<ul class="colors desktoplg-hidden">
+								<li class="gray"></li>
+								<li class="red"></li>
+								<li class="green"></li>
+							</ul>
+							<h2 class="text-size--38 tabletl-text-size--16 trailer--small tabletl-trailer--none text-light tabletl-text-regular">Sony Xperia XZ Compact <span class="tablet-hidden">Third line</span></h2>
+							<ul class="list list--check tablet-hidden text-size--16">
+								<li>Fri tale og sms</li>
+								<li>40 GB data</li>
+								<li>Roam Away i 36 lande</li>
+							</ul>
+						</div>
+						<div class="price-box trailer">
+							<p class="price-before text-size--13 tablet-hidden text-regular">Only</p>
+							<p class="text-size--44 tabletl-text-size--19 text-light tabletl-text-regular color-blue">XXX<span class="text-size--19 tabletl-text-size--11 color-gray text-regular toleft--xsmall">KR./MD.</span></p>
+						</div>
+					</div>
+					<p class="col-hg-6 text-size--11 text-legal"><span class="tablet-hidden display--block">Free delivery on all phones</span> Minimum price w. FRI+ XX GB: X.XXX kr.</span></p>
+				</div>
+			</div>
+			<div class="col-hg-3 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
+				<a href="#" class="content-block content-block--small">
+					<div class="image-area trailer--med">
+						<div class="image-holder">
+							<img src="hphones.png" alt="">
+						</div>
+						<img class="sticker" src="splash.png" alt="sticker">
+					</div>
+					<ul class="colors">
+						<li class="gray"></li>
+						<li class="red"></li>
+						<li class="green"></li>
+					</ul>
+					<h3 class="text-size--16">Sony Xperia XZ Compact</h3>
+					<div class="price-box trailer">
+						<p class="text-size--19 color-blue">XXX<span class="text-size--11 color-gray toleft--xsmall">KR./MD.</span></p>
+					</div>
+					<p class="text-size--11 text-legal">Minimum price w. FRI+ XX GB: X.XXX kr.</span></p>
+				</a>
+			</div>
+			<div class="col-hg-3 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
+				<a href="#" class="content-block content-block--small">
+					<div class="image-area trailer--med">
+						<div class="image-holder">
+							<img src="phone-01.jpg" alt="">
+						</div>
+						<img class="sticker" src="splash.png" alt="sticker">
+					</div>
+					<ul class="colors">
+						<li class="gray"></li>
+						<li class="red"></li>
+						<li class="green"></li>
+					</ul>
+					<h3 class="text-size--16">Sony Xperia XZ Compact</h3>
+					<div class="price-box">
+						<p class="text-size--19 color-blue">XXX<span class="text-size--11 color-gray toleft--xsmall">KR./MD.</span></p>
+					</div>
+					<p class="text-size--11 text-legal">Minimum price w. FRI+ XX GB: X.XXX kr.</span></p>
+				</a>
+			</div>
+			<div class="col-hg-3 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
+				<a href="#" class="content-block content-block--small">
+					<div class="image-area trailer--med">
+						<div class="image-holder">
+							<img src="phone-01.jpg" alt="">
+						</div>
+						<img class="sticker" src="splash.png" alt="sticker">
+					</div>
+					<ul class="colors">
+						<li class="gray"></li>
+						<li class="red"></li>
+						<li class="green"></li>
+					</ul>
+					<h3 class="text-size--16">Sony Xperia XZ Compact</h3>
+					<div class="price-box trailer">
+						<p class="text-size--19 color-blue">XXX<span class="text-size--11 color-gray toleft--xsmall">KR./MD.</span></p>
+					</div>
+					<p class="text-size--11 text-legal">Minimum price w. FRI+ XX GB: X.XXX kr.</span></p>
+				</a>
+			</div>
+			<div class="col-hg-3 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
+				<a href="#" class="content-block content-block--small">
+					<div class="image-area trailer--med">
+						<div class="image-holder">
+							<img src="phone-01.jpg" alt="">
+						</div>
+						<img class="sticker" src="splash.png" alt="sticker">
+					</div>
+					<ul class="colors">
+						<li class="gray"></li>
+						<li class="red"></li>
+						<li class="green"></li>
+					</ul>
+					<h3 class="text-size--16">Sony Xperia XZ Compact</h3>
+					<div class="price-box trailer">
+						<p class="text-size--19 color-blue">XXX<span class="text-size--11 color-gray toleft--xsmall">KR./MD.</span></p>
+					</div>
+					<p class="text-size--11 text-legal">Minimum price w. FRI+ XX GB: X.XXX kr.</span></p>
+				</a>
+			</div>
+			<div class="col-md-6 grid-row--gutter-none content-block--wide">
+				<a href="#" class="col-xs content-block content-block__banner grid-row--gutter-none grid-row-xs--bottom padding-whole--xxlarge padding-trailer--large mobile-padding-toleft mobile-padding-toright" style="background-image: url(banner-01.jpg);">
+					<div class="col-xs">
+						<strong class="text-size--13">FAMILYOFFER</strong>
+						<h2 class="text-size--44 tabletp-text-size--28 text-light trailer text-light">Buy broadband for the whole family</h2>
+						<span class="button button--action trailer--large">Broadband subscriptions</span>
+						<p class="text-size--11 color-white">Minimum price w. FRI+ XX GB: X.XXX kr.</span></p>
+					</div>
+				</a>
+			</div>
+			<div class="col-xs-12 grid-row--gutter-none content-block--wide">
+				<a href="#" class="col-xs content-block content-block__banner--large content-block__video-banner grid-row--gutter-none grid-row-lg--middle grid-row-xs--bottom grid-row-xs--center padding-whole--xxlarge mobile-padding-toleft mobile-padding-toright" style="background-image: url(banner-02.jpg)">
+					<div class="video-background">
+						<video autoplay loop muted>
+							<source type="video/mp4" src="https://player.vimeo.com/external/184862802.hd.mp4?s=2f40bc3e5491efdd0fd672ca0867ab206a3bdd0a&profile_id=174">
+						</video>
+					</div>
+					<div class="col-hg-8 col-lg-10 banner-content">
+						<span class="icon icon-home-broadband circle-outline  circle-outline text-size--50 trailer--small inline-block border-width-2"></span>
+						<p class="text-size--13 leader text-bold">FAMILY SUBSCRIPTIONS</p>
+						<h2 class="text-size--44 tabletp-text-size--28 text-light trailer text-light">Get your family online by combining all your subscriptions</h2>
+						<span class="button button--action trailer--large">Broadband subscriptions</span>
+					</div>
+					<p class="text-size--11 color-white banner-legal">Minimum price w. FRI+ XX GB: X.XXX kr.</span></p>
+				</a>
+			</div>
+			<div class="col-hg-9 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
+				<a href="#" class="content-block content-block--large grid-row--gutter-none">
+					<div class="col-hg-6 bundle-content tabletl-text--center padding-trailer--large tabletl-padding-trailer--none">
+						<div class="description">
+							<strong class="text-size--13 tablet-hidden">BUNDLE</strong>
+							<h2 class="text-size--38 tabletl-text-size--16 trailer--small tabletl-trailer--none text-light tabletl-text-regular">Sony Xperia X Compact with headset</h2>
+							<p class="text-size--19 tablet-hidden">Buy the new Sony Xperia phone and get a pair of Sony headphones with you.</p>
+						</div>
+						<div class="price-box trailer">
+							<p class="price-before text-size--13 tablet-hidden text-regular">Only</p>
+							<p class="text-size--44 tabletl-text-size--19 text-light tabletl-text-regular color-blue">XXX<span class="text-size--19 tabletl-text-size--11 color-gray text-regular toleft--xsmall">KR./MD.</span></p>
+						</div>
+					</div>
+					<p class="col-hg-6 text-size--11 text-legal"><span class="tablet-hidden display--block">Free delivery on all phones</span> Minimum price w. FRI+ XX GB: X.XXX kr.</span></p>
+					<div class="col-hg-7 bundle-image-area mobile-order--first">
+						<div class="image-holder">
+							<img src="Bundle-test.png" alt="">
+						</div>
+					</div>
+				</a>
+			</div>
+			<div class="col-hg-3 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
+				<a href="#" class="content-block content-block--small">
+					<div class="image-area trailer--med">
+						<div class="image-holder">
+							<img src="phone-01.jpg" alt="">
+						</div>
+						<img class="sticker" src="splash.png" alt="sticker">
+					</div>
+					<ul class="colors">
+						<li class="gray"></li>
+						<li class="red"></li>
+						<li class="green"></li>
+					</ul>
+					<h3 class="text-size--16">Sony Xperia XZ Compact</h3>
+					<div class="price-box trailer">
+						<p class="text-size--19 color-blue">XXX<span class="text-size--11 color-gray toleft--xsmall">KR./MD.</span></p>
+					</div>
+					<p class="text-size--11 text-legal">Minimum price w. FRI+ XX GB: X.XXX kr.</span></p>
+				</a>
+			</div>
+			<div class="col-hg-9 col-md-6 grid-row--gutter-none content-block--wide">
+				<a href="#" class="col-xs content-block content-block__banner paddding-whole--xxlarge grid-row--gutter-none grid-row-xs--bottom padding-whole--xxlarge padding-trailer--large mobile-padding-toleft mobile-padding-toright" style="background-image: url(banner-03.jpg)">
+					<div class="col-xs">
+						<strong class="text-size--13">SUBSCRIPTIONS</strong>
+						<h2 class="text-size--44 tabletp-text-size--28 text-light trailer text-light">Chat with your friends for<br class="tablet-hidden" /> 99 kr. without worring <br class="tablet-hidden" />about data</h2>
+						<span class="button button--action trailer--large">Broadband subscriptions</span>
+						<p class="text-size--11 color-white">Minimum price w. FRI+ XX GB: X.XXX kr.</span></p>
+					</div>
+				</a>
+			</div>
+			<div class="col-hg-3 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
+				<div class="content-block content-block--small">
+					<h3 class="text-size--28 trailer">Find mobile</h3>
+					<div class="separator trailer"></div> 
+					<ul class="trailer--large">
+						<li class="trailer--small"><a href="#" class="button button--default button--stretch">Apple</a></li>
+						<li class="trailer--small"><a href="#" class="button button--default button--stretch">Samsung</a></li>
+						<li class="trailer--small"><a href="#" class="button button--default button--stretch">Sony</a></li>
+						<li class="trailer--small"><a href="#" class="button button--default button--stretch">Microsoft</a></li>
+						<li><a href="#" class="button button--default button--stretch">HTC</a></li>
+					</ul>
+					<a href="#" class="link--blue">See all tabletps</a>
+				</div>
+			</div>
 		</div>
 	</div>
 </div>
